# jax_dne_hmc

./: .gitignore  README.md  pyproject.toml
jax_dne_hmc/: __init__.py
jax_dne_hmc/data/: __init__.py  loaders.py
jax_dne_hmc/dne/: __init__.py  architectures.py  covariance_emulator.py  hparam_tuning.py  losses.py  mean_emulator.py  scalers.py
jax_dne_hmc/examples/toy_linear_model/: README.md  inference_script.py  train_covar_emulator.py  train_mean_emulator.py
jax_dne_hmc/hmc/: hmc.py
jax_dne_hmc/utils/: __init__.py  covar_metrics.py  hmc_variable_transformations.py
